edited instructions